frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | SwitchStmt
  31       | RepeatUntil
  32       | WhileStmt
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock
  38       | ADDONE Expr ';'
  39       | Expr ADDONE ';'
  40       | SUBONE Expr ';'
  41       | Expr SUBONE ';'

  42  SimpleStmt : LValue '=' Expr
  43             | Call
  44             |
  45             | ADDONE Expr
  46             | Expr ADDONE
  47             | SUBONE Expr
  48             | Expr SUBONE

  49  Receiver : Expr '.'
  50           |

  51  LValue : Receiver IDENTIFIER
  52         | Expr '[' Expr ']'

  53  Call : Receiver IDENTIFIER '(' Actuals ')'

  54  Expr : LValue
  55       | Call
  56       | Constant
  57       | Expr '+' Expr
  58       | Expr '-' Expr
  59       | Expr '*' Expr
  60       | Expr '/' Expr
  61       | Expr '%' Expr
  62       | Expr EQUAL Expr
  63       | Expr NOT_EQUAL Expr
  64       | Expr '<' Expr
  65       | Expr '>' Expr
  66       | Expr LESS_EQUAL Expr
  67       | Expr GREATER_EQUAL Expr
  68       | Expr AND Expr
  69       | Expr OR Expr
  70       | '(' Expr ')'
  71       | '-' Expr
  72       | ADDONE Expr
  73       | Expr ADDONE
  74       | SUBONE Expr
  75       | Expr SUBONE
  76       | '!' Expr
  77       | Expr '?' Expr ':' Expr
  78       | READ_INTEGER '(' ')'
  79       | READ_LINE '(' ')'
  80       | THIS
  81       | NEW IDENTIFIER '(' ')'
  82       | NEW Type '[' Expr ']'
  83       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  84       | '(' CLASS IDENTIFIER ')' Expr

  85  Constant : LITERAL
  86           | NULL

  87  Actuals : ExprList
  88          |

  89  ExprList : ExprList ',' Expr
  90           | Expr

  91  WhileStmt : WHILE '(' Expr ')' Stmt

  92  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  93  RepeatUntil : REPEAT Stmt UNTIL Expr

  94  BreakStmt : BREAK

  95  IfStmt : IF '(' Expr ')' Stmt ElseClause

  96  CaseStmt : CASE Constant ':' StmtList

  97  DefaultStmt : DEFAULT ':' StmtList

  98  SwitchStmt : SWITCH '(' Expr ')' '{' SwitchBlock '}'

  99  SwitchBlock : SwitchBlock CaseStmt
 100              | SwitchBlock DefaultStmt
 101              |

 102  ElseClause : ELSE Stmt
 103             |

 104  ReturnStmt : RETURN Expr
 105             | RETURN

 106  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (44)
	Receiver : .  (50)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	SWITCH  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'{'  shift 41
	'}'  shift 64
	ADDONE  shift 65
	SUBONE  shift 66
	IDENTIFIER  reduce 50
	';'  reduce 44

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	SwitchStmt  goto 72
	RepeatUntil  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	Expr  goto 79
	LValue  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (86)

	.  reduce 86


state 47
	Expr : THIS .  (80)

	.  reduce 80


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (91)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (92)

	'('  shift 85
	.  error


state 50
	RepeatUntil : REPEAT . Stmt UNTIL Expr  (93)
	SimpleStmt : .  (44)
	Receiver : .  (50)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	REPEAT  shift 50
	IF  shift 51
	SWITCH  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'{'  shift 41
	ADDONE  shift 65
	SUBONE  shift 66
	IDENTIFIER  reduce 50
	';'  reduce 44

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 86
	SimpleStmt  goto 70
	IfStmt  goto 71
	SwitchStmt  goto 72
	RepeatUntil  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	Expr  goto 79
	LValue  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (95)

	'('  shift 87
	.  error


state 52
	SwitchStmt : SWITCH . '(' Expr ')' '{' SwitchBlock '}'  (98)

	'('  shift 88
	.  error


state 53
	ReturnStmt : RETURN . Expr  (104)
	ReturnStmt : RETURN .  (105)
	Receiver : .  (50)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 50
	';'  reduce 105

	Expr  goto 91
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 54
	BreakStmt : BREAK .  (94)

	.  reduce 94


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (81)
	Expr : NEW . Type '[' Expr ']'  (82)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 94
	.  error

	Type  goto 95


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (106)

	'('  shift 96
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (78)

	'('  shift 97
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (79)

	'('  shift 98
	.  error


state 59
	Constant : LITERAL .  (85)

	.  reduce 85


state 60
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (83)

	'('  shift 99
	.  error


state 61
	Expr : '-' . Expr  (71)
	Receiver : .  (50)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 50

	Expr  goto 100
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 62
	Expr : '!' . Expr  (76)
	Receiver : .  (50)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 50

	Expr  goto 101
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 63
	Expr : '(' . Expr ')'  (70)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (84)
	Receiver : .  (50)

	CLASS  shift 102
	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 50

	Expr  goto 103
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83


state 64
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 65
	Stmt : ADDONE . Expr ';'  (38)
	SimpleStmt : ADDONE . Expr  (45)
	Expr : ADDONE . Expr  (72)
	Receiver : .  (50)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	ADDONE  shift 89
	SUBONE  shift 90
	IDENTIFIER  reduce 50

	Expr  goto 104
	LValue  goto 92
	Call  goto 93
	Receiver  goto 82
	Constant  goto 83

